# OpenSourceMML

./: CMakeLists.txt  README.md
include/: MMLBase.h  MMLExceptions.h
include/base/: BaseUtils.h  Geometry.h  Geometry3D.h  Matrix.h  MatrixNM.h  Tensor.h  Vector.h  VectorN.h
include/core/: CoordSystem.h  CoordTransf.h  Derivation.h  Function.h
include/interfaces/: ICoordTransf.h  IFunction.h  ITensor.h
src/: CMakeLists.txt  demo_app_main.cpp  docs_demos_main.cpp  examples_main.cpp  readme_examples_main.cpp
src/demo_app/: demo_vector.cpp
src/docs_demos/: docs_demo_vector.cpp
src/examples/: example1_kosi_hitac.cpp
src/readme_examples/: readme1_vectors_matrices.cpp
tests/: CMakeLists.txt
tests/base/: vector_tests.cpp
